--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -46,6 +46,7 @@ jobs:
         run: terraform fmt -check
 
   build-push:
+    needs: format-check
     runs-on: ubuntu-latest
     environment: development
 
