--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -97,6 +97,14 @@ jobs:
             echo "image_tag=latest" >> $GITHUB_OUTPUT
             echo "Deploying to multiple environments with latest tag"
           else
+
+            # on branch build exit deployment when a "PR to main" exists
+            pr_exists=$(gh pr list --head "${{ github.ref_name }}" --base main --state open --json number --jq length)
+            if [ "$pr_exists" -gt 0 ]; then
+              echo "PR to main exists, exiting"
+              exit 0
+            fi
+
             eph_env="${GITHUB_REPOSITORY//\//-}-$([ "${{ github.event_name }}" = "pull_request" ] && echo "$GITHUB_HEAD_REF" || echo "$GITHUB_REF_NAME")"
             echo "Checking for GCP project: $eph_env"
             
@@ -105,15 +113,6 @@ jobs:
               echo "envs=$eph_env" >> $GITHUB_OUTPUT
               echo "image_tag=${{ inputs.image_tag }}" >> $GITHUB_OUTPUT
               echo "Ephemeral environment found: $eph_env"
-
-              # if we are in a branch build, but a "PR to main" exists then we should exit, 
-              # as we want to give PR builds preference
-              pr_exists=$(gh pr list --head "${{ github.ref_name }}" --base main --state open --json number --jq length)
-              if [ "$pr_exists" -gt 0 ]; then
-                echo "PR to main exists, exiting"
-                exit 0
-              fi
-
             else
               echo "envs=" >> $GITHUB_OUTPUT
               echo "image_tag=" >> $GITHUB_OUTPUT
