--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -83,6 +83,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
+    env:
+      GH_TOKEN: ${{ github.token }}
 
     steps:
       - name: Dump All Default Environment Variables
