--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -87,6 +87,9 @@ jobs:
       GH_TOKEN: ${{ github.token }}
 
     steps:
+      - name: Install GitHub CLI
+        uses: actions/setup-gh@v1
+
       - name: Dump All Default Environment Variables
         run: env
 
@@ -100,12 +103,12 @@ jobs:
             echo "Deploying to multiple environments with latest tag"
           else
 
-            # # on branch build exit deployment when a "PR to main" exists
-            # pr_exists=$(gh pr list --head "${{ github.ref_name }}" --base main --state open --json number --jq length)
-            # if [ "$pr_exists" -gt 0 ]; then
-            #   echo "PR to main exists, exiting"
-            #   exit 0
-            # fi
+            # on branch build OR PR build exit deployment if a "PR to main" exists AND this is not that "PR to main" build
+            pr_exists=$(gh pr list --head "${{ github.ref_name }}" --base main --state open --json number --jq length)
+            if [ "$pr_exists" -gt 0 ] && [ "${{ github.event_name }}" != "pull_request" ]; then
+              echo "PR to main exists for this branch, but this is not the PR build - exiting"
+              exit 0
+            fi
 
             eph_env="${GITHUB_REPOSITORY//\//-}-$([ "${{ github.event_name }}" = "pull_request" ] && echo "$GITHUB_HEAD_REF" || echo "$GITHUB_REF_NAME")"
             echo "Checking for GCP project: $eph_env"
