--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -83,17 +83,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
-    env:
-      GH_TOKEN: ${{ github.token }}
 
     steps:
-      - name: Install GitHub CLI
-        uses: actions/setup-gh@v1
-
       - name: Dump All Default Environment Variables
         run: env
 
       - name: Check Environment
+        env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         id: check_env
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
