--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -80,11 +80,11 @@ jobs:
       - name: Push image
         run: docker push --all-tags gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-push
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build-push
 
-    steps:
+  #   steps:
       - name: Dump All Default Environment Variables
         run: env
 
