--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -80,15 +80,7 @@ jobs:
       - name: Push image
         run: docker push --all-tags gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build-push
-
-  #   steps:
-      - name: Dump All Default Environment Variables
-        run: env
-
-      - name: Check Environment
+      - name: Check Deployment Target
         env:
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         id: check_env
