--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -105,10 +105,12 @@ jobs:
               fi
               echo "No PR to main exists, proceeding with deployment"
             else
-              # This is a branch build - check if there's a PR to main
-              pr_to_main_exists=$(gh pr list --head "${{ github.ref_name }}" --base main --state open --json number --jq length)
-              if [ "$pr_to_main_exists" -gt 0 ]; then
-                echo "PR to main exists, skipping deployment of this 'branch build'"
+              # This is a branch build - check if there are ANY PRs involving this branch
+              prs_as_head=$(gh pr list --head "${{ github.ref_name }}" --state open --json number --jq length)
+              prs_as_base=$(gh pr list --base "${{ github.ref_name }}" --state open --json number --jq length)
+              total_prs=$((prs_as_head + prs_as_base))
+              if [ "$total_prs" -gt 0 ]; then
+                echo "Found $total_prs PR(s) involving branch '${{ github.ref_name }}' - skipping deployment"
                 exit 0
               fi
               echo "No PR to main exists, proceeding with deployment"
