--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -85,4 +85,5 @@ jobs:
     with:
       image_tag: ${{ inputs.custom_sha || github.sha }}
       deploy_workflow: deploy-stats-api.yml
-    secrets: inherit
+    secrets:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
