--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -85,5 +85,4 @@ jobs:
     with:
       image_tag: ${{ inputs.custom_sha || github.sha }}
       deploy_workflow: deploy-stats-api.yml
-    secrets:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    secrets: inherit
