--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -80,7 +80,7 @@ jobs:
         run: docker push --all-tags gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}
 
       - name: Deployment Routing
-        uses: arXiv/arxiv-iac/.github/actions/deployment-routing@workflow4
+        uses: arXiv/iac-public/.github/actions/deployment-routing@main  
         with:
           image_tag: ${{ inputs.custom_sha || github.sha }}
           deploy_workflow: deploy-stats-api.yml
