--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -20,6 +20,7 @@ permissions:
   contents: read
   pull-requests: write
   id-token: write
+  actions: write
 
 env:
   DOCKERFILE: "Dockerfile.api"
