--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -80,7 +80,9 @@ jobs:
       - name: Push image
         run: docker push --all-tags gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}
 
+      # don't deploy image rebuilds
       - name: Deployment Routing
+        if: ${{ !inputs.custom_sha }}
         uses: arXiv/iac-public/.github/actions/service-deployment-routing@main  
         with:
           image_tag: ${{ inputs.custom_sha || github.sha }}
