--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -83,16 +83,9 @@ jobs:
 
       - name: Deployment Routing
         if: ${{ !inputs.custom_sha }}
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          gh workflow run "Service Deployment Routing" \
-            --repo arXiv/arxiv-iac \
-            --ref main \
-            -f image_tag="${{ github.sha }}" \
-            -f deploy_workflow="${{ env.DEPLOY_WORKFLOW }}" \
-            -f repository="${{ github.repository }}" \
-            -f ref_name="${{ github.ref_name }}" \
-            -f event_name="${{ github.event_name }}" \
-            -f base_ref="${{ github.event.pull_request.base.ref || '' }}" \
-            -f head_ref="${{ github.event.pull_request.head.ref || '' }}"
+        uses: arXiv/arxiv-iac/.github/actions/service-deployment-routing@main
+        with:
+          image_tag: ${{ github.sha }}
+          deploy_workflow: ${{ env.DEPLOY_WORKFLOW }}
+          workload_identity_provider: ${{ secrets.ARXIV_DEVELOPMENT_PROVIDER_NAME_SECRET }}
+          service_account: ${{ secrets.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT_SECRET }}
