--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -84,7 +84,7 @@ jobs:
       # don't deploy image rebuilds
       - name: Deployment Routing
         if: ${{ !inputs.custom_sha }}
-        uses: arXiv/arxiv-iac/.github/actions/service-deployment-routing@main
+        uses: arXiv/arxiv-iac/.github/actions/service-deployment-routing@6033868b3654576ac38f96e14c78fb6a1abea26f
         with:
           image_tag: ${{ inputs.custom_sha || github.sha }}
           deploy_workflow: ${{ env.DEPLOY_WORKFLOW }}
