--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -88,7 +88,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           gh workflow run service-deployment-routing.yml \
-            --repo arXiv/arxiv-iac \
+            --repo https://github.com/arXiv/arxiv-iac \
             -f image_tag="${{ inputs.custom_sha || github.sha }}" \
             -f deploy_workflow="${{ env.DEPLOY_WORKFLOW }}" \
             -f repository="${{ github.repository }}" \
