--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -87,15 +87,10 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.ARXIV_IAC_PAT }}
         run: |
-          echo "Testing GitHub CLI access..."
-          gh auth status
-          echo "Checking repository access..."
-          gh repo view arXiv/arxiv-iac --json name,visibility || echo "Failed to access repository"
-          echo "Running workflow..."
           gh workflow run service-deployment-routing.yml \
             --repo arXiv/arxiv-iac \
             --ref workflow5 \
-            -f image_tag="${{ inputs.custom_sha || github.sha }}" \
+            -f image_tag="${{ github.sha }}" \
             -f deploy_workflow="${{ env.DEPLOY_WORKFLOW }}" \
             -f repository="${{ github.repository }}" \
             -f ref_name="${{ github.ref_name }}" \
